@@ -1,3 +1,8 @@
+2008-11-24  Michal Ludvig  <michal@logix.cz>
+
+	* S3/Utils.py: Common XML parser.
+	* s3cmd, S3/Exeptions.py: Print info message on Error.
+
 2008-11-21  Michal Ludvig  <michal@logix.cz>
 
 	* s3cmd: Support for 'cp' command.
